# Algoritmos-de-reemplazo-de-paginas

./: CMakeLists.txt  README.md  compilar.bat  compilar.ps1  ejecutar.bat
include/: Clock.h  FIFO.h  LFU.h  LRU.h  MFU.h  NRU.h  Optimal.h  PagingAlgorithm.h  SecondChance.h
src/: Clock.cpp  FIFO.cpp  LFU.cpp  LRU.cpp  MFU.cpp  NRU.cpp  Optimal.cpp  SecondChance.cpp  main.cpp
